name:                ihaskell-lightning
version:             0.1.0.0
synopsis:            IHaskellDisplay instance of lightning-haskell
description:         Please see README.md
homepage:            https://github.com/alexeiras/ihaskell-lightning#readme
license:             BSD3
license-file:        LICENSE
author:              Alejandro Eiras
maintainer:          alex@sinamo.net
copyright:           2016 Alejandro Eiras
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     IHaskell.Display.Lightning
  build-depends:       base >= 4.7 && < 5
                     , blaze-html >= 0.6 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , http-client >= 0.4.0
                     , http-client-tls >= 0.2.4.0
                     , ihaskell >= 0.6.2
                     , ihaskell-blaze >= 0.3 && < 0.4
                     , lightning-haskell >= 0.1.0.3
                     , text >= 1.2 && < 1.3
                     , transformers >= 0.4 && < 0.5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexeiras/ihaskell-lightning
